// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Number min/max render with a unit type for currency 1`] = `
<Number__UnitSymbol
  data-test="unit"
  id="unit-number"
>
  £
</Number__UnitSymbol>
`;

exports[`Number min/max render with a unit type for percentage 1`] = `
<Number__UnitSymbol
  data-test="unit"
  id="unit-number"
  trailing={true}
>
  %
</Number__UnitSymbol>
`;

exports[`Number min/max render with a unit type for unit 1`] = `
<Number__UnitSymbol
  data-test="unit"
  id="unit-number"
  trailing={true}
>
  cm
</Number__UnitSymbol>
`;

exports[`Number should render correctly 1`] = `
<Number__StyledDiv>
  <Number__NumberInput
    aria-labelledby="number"
    aria-live="assertive"
    data-test="number-input"
    default={null}
    id="number"
    max={10}
    min={-10}
    name="numberName"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyDown={[Function]}
    step={1}
    type="number"
    value={null}
  />
</Number__StyledDiv>
`;
